CNDB-18512: Add metrics about fetched/returned cells to the slow query logger (#2564)
Add the number of fetched and returned cells to the log reports
produced for slow queries. This is done for both SAI and regular
queries.

Differently to the counts of partitions and rows, there are no separate
counts of live and deleted cells. This is because having separate counts
of live/deleted cells would require to iterate the b-tree of cells
checking timestamps or every returned row of every query. Benchmarking
has proven that that has a significative impact on performance, so we
limit this to just counting cells regardless of liveness info.